--- a/Paita2025-2.html
+++ b/Paita2025-2.html
@@ -11,43 +11,63 @@
             font-family: 'Inter', sans-serif;
             background-color: #f3f4f6; /* Fondo gris claro */
         }
-        .afiche-card {
-            background-color: #ffffff;
-            border-radius: 1.5rem; /* rounded-xl */
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* sombra-xl */
-            padding: 2rem;
-            max-width: 90vw; /* Ancho responsivo */
+        .afiche-main-container {
+            max-width: 1200px; /* Ancho máximo para el contenido principal */
             margin: 2rem auto;
+            padding: 1.5rem;
             text-align: center;
+        }
+        .afiche-title {
+            font-size: 2.5rem; /* Texto extra grande */
+            font-weight: 800; /* Extra negrita */
+            color: #4f46e5; /* Indigo-700 */
+            margin-bottom: 1.5rem;
+        }
+        .afiche-subtitle {
+            font-size: 2rem; /* Texto grande */
+            font-weight: 700; /* Negrita */
+            color: #1f2937; /* Gris-800 */
+            margin-bottom: 2rem;
+        }
+        .afiche-description {
+            font-size: 1.125rem; /* Texto lg */
+            color: #4b5563; /* Gris-700 */
+            margin-bottom: 2.5rem;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .cards-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); /* Columnas responsivas */
+            gap: 1.5rem; /* Espacio entre tarjetas */
+            justify-content: center;
+            align-items: stretch; /* Asegura que las tarjetas tengan la misma altura */
+        }
+        .day-card {
+            background-color: #ffffff;
+            border-radius: 1.5rem; /* redondeado XL */
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); /* Sombra */
+            padding: 1.5rem;
+            display: flex;
+            flex-direction: column;
+            text-align: left;
         }
         .day-heading {
             display: flex;
             align-items: center;
-            justify-content: flex-start;
-            margin-top: 1.5rem;
-            margin-bottom: 0.5rem;
-            font-size: 1.5rem; /* texto-2xl */
-            font-weight: 700; /* negrita */
+            margin-bottom: 1rem;
+            font-size: 1.25rem; /* Texto xl */
+            font-weight: 700; /* Negrita */
             color: #1f2937; /* Gris-900 */
         }
-        .class-item {
-            display: flex;
-            align-items: flex-start;
-            text-align: left;
-            margin-bottom: 1rem;
-            padding-left: 1.5rem; /* pl-6 */
-        }
         .class-icon {
-            font-size: 1.5rem; /* texto-2xl */
+            font-size: 1.5rem; /* Texto 2xl */
             margin-right: 0.75rem; /* mr-3 */
-            line-height: 1.2;
-        }
-        .class-details {
-            flex-grow: 1;
         }
         .class-details p {
-            margin: 0.25rem 0; /* my-1 */
-            font-size: 1rem; /* texto-base */
+            margin: 0.3rem 0; /* my-1 */
+            font-size: 0.95rem; /* Texto sm */
             color: #374151; /* Gris-700 */
         }
         .class-details strong {
@@ -55,108 +75,146 @@
         }
         .btn-inscripcion {
             display: inline-block;
-            background-color: #4f46e5; /* indigo-600 */
+            background-color: #6366f1; /* Indigo-500 */
             color: #ffffff;
             padding: 0.75rem 1.5rem; /* py-3 px-6 */
             border-radius: 0.75rem; /* rounded-xl */
             text-decoration: none;
-            font-weight: 600; /* semibold */
+            font-weight: 600; /* Semibold */
             transition: background-color 0.3s ease;
-            margin-top: 0.5rem;
+            margin-top: 1rem;
+            align-self: flex-start; /* Alinea el botón al inicio de la tarjeta */
+            font-size: 0.95rem;
         }
         .btn-inscripcion:hover {
-            background-color: #4338ca; /* indigo-700 */
+            background-color: #4f46e5; /* Indigo-600 */
+        }
+
+        /* Responsive adjustments for smaller screens */
+        @media (max-width: 640px) {
+            .afiche-title {
+                font-size: 2rem;
+            }
+            .afiche-subtitle {
+                font-size: 1.75rem;
+            }
+            .afiche-description {
+                font-size: 1rem;
+            }
+            .day-heading {
+                font-size: 1.1rem;
+            }
+            .class-icon {
+                font-size: 1.3rem;
+            }
+            .class-details p {
+                font-size: 0.875rem;
+            }
+            .btn-inscripcion {
+                padding: 0.6rem 1.2rem;
+                font-size: 0.875rem;
+            }
         }
     </style>
 </head>
-<body class="p-4 md:p-8 bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="afiche-card">
-        <h1 class="text-4xl md:text-5xl font-extrabold text-indigo-700 mb-6">¡Inicia el segundo periodo de Institutos!</h1>
-        <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-8">Estaca Paita</h2>
+<body class="bg-gray-100 min-h-screen flex flex-col items-center py-8">
+    <div class="afiche-main-container">
+        <h1 class="afiche-title">¡Inicia el segundo periodo de Institutos!</h1>
+        <h2 class="afiche-subtitle">Estaca Paita</h2>
 
-        <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto">
+        <p class="afiche-description">
             Prepárate para fortalecer tu fe y aprender más sobre el evangelio. Tenemos cursos para todos, impartidos por excelentes maestros. ¡No te lo pierdas!
         </p>
 
-        <div class="space-y-6 text-left">
-            <!-- Clases para Martes -->
-            <div class="day-heading">🟣 Martes:</div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Roger Ramírez Toledo</p>
-                    <p><strong>Teléfono:</strong> 965379512</p>
-                    <p><strong>Curso:</strong> Lecciones de Preparación para la Vida</p>
-                    <p><strong>Hora:</strong> 7:30 p.m.</p>
-                    <p><strong>Lugar:</strong> Capilla Las Begonias</p>
-                    <a href="https://myinstitute.churchofjesuschrist.org/signup/1643339" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+        <div class="cards-container">
+            <!-- Tarjeta para Martes -->
+            <div class="day-card">
+                <div class="day-heading">🟣 Martes:</div>
+                <div class="class-item">
+                    <span class="class-icon">👉</span>
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Roger Ramírez Toledo</p>
+                        <p><strong>Teléfono:</strong> 965379512</p>
+                        <p><strong>Curso:</strong> Lecciones de Preparación para la Vida</p>
+                        <p><strong>Hora:</strong> 7:30 p.m.</p>
+                        <p><strong>Lugar:</strong> Capilla Las Begonias</p>
+                        <a href="https://myinstitute.churchofjesuschrist.org/signup/1643339" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+                    </div>
                 </div>
             </div>
 
-            <!-- Clases para Miércoles -->
-            <div class="day-heading">🔵 Miércoles:</div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Ángel Landa</p>
-                    <p><strong>Teléfono:</strong> 923497855</p>
-                    <p><strong>Curso:</strong> Jesús el Cristo</p>
-                    <p><strong>Hora:</strong> 8:00 p.m.</p>
-                    <p><strong>Lugar:</strong> Capilla Las Begonias</p>
-                    <a href="https://myinstitute.churchofjesuschrist.org/signup/1643464" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+            <!-- Tarjeta para Miércoles -->
+            <div class="day-card">
+                <div class="day-heading">🔵 Miércoles:</div>
+                <div class="class-item">
+                    <span class="class-icon">👉</span>
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Ángel Landa</p>
+                        <p><strong>Teléfono:</strong> 923497855</p>
+                        <p><strong>Curso:</strong> Jesús el Cristo</p>
+                        <p><strong>Hora:</strong> 8:00 p.m.</p>
+                        <p><strong>Lugar:</strong> Capilla Las Begonias</p>
+                        <a href="https://myinstitute.churchofjesuschrist.org/signup/1643464" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+                    </div>
                 </div>
             </div>
 
-            <!-- Clases para Jueves -->
-            <div class="day-heading">🟠 Jueves:</div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Camila Carrion</p>
-                    <p><strong>Teléfono:</strong> 907712504</p>
-                    <p><strong>Curso:</strong> Jesucristo y el Evangelio Sempiterno</p>
-                    <p><strong>Hora:</strong> 8:00 p.m.</p>
-                    <p><strong>Lugar:</strong> Capilla Puerto Paita</p>
-                    <a href="https://myinstitute.churchofjesuschrist.org/signup/1643463" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+            <!-- Tarjeta para Jueves -->
+            <div class="day-card">
+                <div class="day-heading">🟠 Jueves:</div>
+                <div class="class-item">
+                    <span class="class-icon">👉</span>
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Camila Carrion</p>
+                        <p><strong>Teléfono:</strong> 907712504</p>
+                        <p><strong>Curso:</strong> Jesucristo y el Evangelio Sempiterno</p>
+                        <p><strong>Hora:</strong> 8:00 p.m.</p>
+                        <p><strong>Lugar:</strong> Capilla Puerto Paita</p>
+                        <a href="https://myinstitute.churchofjesuschrist.org/signup/1643463" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+                    </div>
                 </div>
             </div>
 
-            <!-- Clases para Viernes -->
-            <div class="day-heading">🟢 Viernes:</div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Hno. Paul Martínez</p>
-                    <p><strong>Teléfono:</strong> 976625229</p>
-                    <p><strong>Curso:</strong> Preparación Misional</p>
-                    <p><strong>Hora:</strong> 8:00 p.m.</p>
-                    <p><strong>Lugar:</strong> Capilla Tablazo</p>
-                    <a href="https://myinstitute.churchofjesuschrist.org/signup/1643461" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+            <!-- Tarjeta para Viernes -->
+            <div class="day-card">
+                <div class="day-heading">🟢 Viernes:</div>
+                <div class="class-item">
+                    <span class="class-icon">👉</span>
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Hno. Paul Martínez</p>
+                        <p><strong>Teléfono:</strong> 976625229</p>
+                        <p><strong>Curso:</strong> Preparación Misional</p>
+                        <p><strong>Hora:</strong> 8:00 p.m.</p>
+                        <p><strong>Lugar:</strong> Capilla Tablazo</p>
+                        <a href="https://myinstitute.churchofjesuschrist.org/signup/1643461" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+                    </div>
                 </div>
             </div>
 
-            <!-- Clases para Sábado -->
-            <div class="day-heading">🔴 Sábado:</div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Isac Neyra</p>
-                    <p><strong>Teléfono:</strong> 920821799</p>
-                    <p><strong>Curso:</strong> Respondiendo mis preguntas del Evangelio</p>
-                    <p><strong>Hora:</strong> 5:00 p.m.</p>
-                    <p><strong>Lugar:</strong> Capilla Pueblo Nuevo</p>
-                    <a href="https://myinstitute.churchofjesuschrist.org/signup/1643455" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+            <!-- Tarjeta para Sábado -->
+            <div class="day-card">
+                <div class="day-heading">🔴 Sábado:</div>
+                <div class="class-item">
+                    <span class="class-icon">👉</span>
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Isac Neyra</p>
+                        <p><strong>Teléfono:</strong> 920821799</p>
+                        <p><strong>Curso:</strong> Respondiendo mis preguntas del Evangelio</p>
+                        <p><strong>Hora:</strong> 5:00 p.m.</p>
+                        <p><strong>Lugar:</strong> Capilla Pueblo Nuevo</p>
+                        <a href="https://myinstitute.churchofjesuschrist.org/signup/1643455" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+                    </div>
                 </div>
-            </div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Elvis Sandoval</p>
-                    <p><strong>Teléfono:</strong> 924724078</p>
-                    <p><strong>Curso:</strong> Cortejo y Noviazgo</p>
-                    <p><strong>Hora:</strong> 8:00 p.m.</p>
-                    <p><strong>Lugar:</strong> Capilla Tablazo</p>
-                    <a href="https://myinstitute.churchofjesuschrist.org/signup/1643454" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+                <div class="class-item">
+                    <span class="class-icon">👉</span>
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Elvis Sandoval</p>
+                        <p><strong>Teléfono:</strong> 924724078</p>
+                        <p><strong>Curso:</strong> Cortejo y Noviazgo</p>
+                        <p><strong>Hora:</strong> 8:00 p.m.</p>
+                        <p><strong>Lugar:</strong> Capilla Tablazo</p>
+                        <a href="https://myinstitute.churchofjesuschrist.org/signup/1643454" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+                    </div>
                 </div>
             </div>
         </div>
