--- a/Tumbes2025-2.html
+++ b/Tumbes2025-2.html
@@ -230,6 +230,21 @@
             </div>
         </div>
 
+            <!-- Contenedor de día: Viernes -->
+            <div class="day-card">
+                <div class="day-heading">🟠 Viernes:</div>
+                <div class="class-section">
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Eduardo Inga</p>
+                        <p><strong>Teléfono:</strong> <a href="https://wa.me/51995532028" target="_blank" class="whatsapp-link">995532028</a></p>
+                        <p><strong>Curso:</strong> Preparación Misional</p>
+                        <p><strong>Hora:</strong> 7:30 p.m.</p>
+                        <p><strong>Lugar:</strong> Capilla La Cruz</p>
+                    </div>
+                    <a href="https://myinstitute.churchofjesuschrist.org/signup/1640776" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+                </div>
+            </div>
+            
             <!-- Contenedor de día: Sábado -->
             <div class="day-card">
                 <div class="day-heading">🔴 Sábado:</div>
