--- a/Tumbes2025-2.html
+++ b/Tumbes2025-2.html
@@ -235,13 +235,13 @@
                 <div class="day-heading">🟠 Viernes:</div>
                 <div class="class-section">
                     <div class="class-details">
-                        <p><strong>Maestro:</strong> Eduardo Inga</p>
-                        <p><strong>Teléfono:</strong> <a href="https://wa.me/51995532028" target="_blank" class="whatsapp-link">995532028</a></p>
-                        <p><strong>Curso:</strong> Preparación Misional</p>
-                        <p><strong>Hora:</strong> 7:30 p.m.</p>
-                        <p><strong>Lugar:</strong> Capilla La Cruz</p>
+                        <p><strong>Maestro:</strong> Erick Nuñez</p>
+                        <p><strong>Teléfono:</strong> <a href="https://wa.me/51949951081" target="_blank" class="whatsapp-link">995532028</a></p>
+                        <p><strong>Curso:</strong> Enseñanzas y Doctrinas del Libro de Mormón</p>
+                        <p><strong>Hora:</strong> 10:00 p.m.</p>
+                        <p><strong>Lugar:</strong> Virtual</p>
                     </div>
-                    <a href="https://myinstitute.churchofjesuschrist.org/signup/1640776" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
+                    <a href="https://myinstitute.churchofjesuschrist.org/signup/1643847" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
                 </div>
             </div>
             
