--- a/Paita2025-2.html
+++ b/Paita2025-2.html
@@ -66,7 +66,7 @@
           <a href="https://myinstitute.churchofjesuschrist.org/signup/1643461" target="_blank" class="inline-block mt-2 bg-indigo-600 text-white px-4 py-2 rounded-xl font-semibold hover:bg-indigo-700">¡Inscríbete!</a>
         </div>
 
-         <div>
+         <div class="pt-4 border-t border-gray-300">
           <p><strong>Maestro:</strong> Camila Carrion</p>
           <p><strong>Teléfono:</strong> <a href="https://wa.me/51907712504" target="_blank" class="text-green-600 hover:underline">907712504</a></p>
           <p><strong>Curso:</strong> Jesucristo y el Evangelio Sempiterno</p>
